ubuntu-dev-tools (0.42ubuntu1) intrepid; urgency=low

  [Jonathan Patrick Davies]
  * requestsync: Exit when connecting to Launchpad fails.
  * doc/requestsync.1: Document new -d flag.

  [ Jelmer Vernooij ]
  * requestsync: Add -d option to allow overriding the Debian distro to sync
  from. (LP: #253497)

 -- Jonathan Patrick Davies <jpds@ubuntu.com>  Sun, 24 Aug 2008 21:43:30 +0100

ubuntu-dev-tools (0.41) intrepid; urgency=low

  [ Loic Minier ]
  * Replace .BB in doc/pbuilder-dist.1 with a newline to fix a syntax error.
  * Drop spurious tab in buildd.
  * When https_proxy is in the environment, output a warning and disable it as
    urllib/urllib2 don't support it; see LP #122551.

  [ Kees Cook ]
  * common.py: allow for multiple firefox instances, check all possible
    cookie files.

 -- Kees Cook <kees@ubuntu.com>  Wed, 20 Aug 2008 10:58:24 -0700

ubuntu-dev-tools (0.40ubuntu3) intrepid; urgency=low

  * Import urllib2.

 -- Loic Minier <lool@dooz.org>  Mon, 18 Aug 2008 12:07:27 +0200

ubuntu-dev-tools (0.40ubuntu2) intrepid; urgency=low

  * requestsync: Correct print statement redirect to sys,stderr. 

 -- Jonathan Patrick Davies <jpds@ubuntu.com>  Mon, 18 Aug 2008 10:59:59 +0100

ubuntu-dev-tools (0.40ubuntu1) intrepid; urgency=low

  * Bazaar revision 174.
  * buildd: Code cleanup on single arch options.
  * doc/buildd.1: Created.
  * doc/requestsync.1: Added note about sponsorship detecting.
  * requestsync: Suggest using the --lp flag when mailing a request encounters
    a failure.

 -- Jonathan Patrick Davies <jpds@ubuntu.com>  Sat, 16 Aug 2008 23:38:41 +0100

ubuntu-dev-tools (0.39ubuntu1) intrepid; urgency=low

  * Bazaar revision 169.

  [ Jonathan Patrick Davies ]
  * common.py: Use os.path.expanduser() instead of os.environ.
  * buildd:
    - Added optparse support for option handling.
    - Added support to request the rebuilding or rescoring of only one
      architecture.
    - Various other improvements.