@@ -91,22 +91,12 @@ if os.environ.has_key('https_proxy'):
 launchpadCookie = common.prepareLaunchpadCookie()
 urlopener = common.setupLaunchpadUrlOpener(launchpadCookie)
 
+# Check the release exists.
+# Check release by checking if Launchpad page exists
+common.checkReleaseExists(release)
+
 # Find out the version in given release.
-try:
-    page = urlopener.open('https://launchpad.net/ubuntu/+source/' + package).read()
-except urllib2.HTTPError:
-    print >> sys.stderr, "The source package (%s) does not appear to exist " \
-        "in Ubuntu." % package
-    sys.exit(1)
-
-m = re.search('"/ubuntu/%s/\+source/%s/(\d[^"]+)"' % (release,
-    package.replace('+', '\+')), page)
-if not m:
-    print >> sys.stderr, "Unable to find this source package (%s) in this " \
-        "release (%s)." % (package, release.capitalize())
-    sys.exit(1)
-
-version = m.group(1)
+(page, version) = common.checkSourceExists(package, release)
 
 # Output details.
 print "The source version for '%s' in %s is at %s." % (package,
