@@ -3,6 +3,8 @@ ubuntu-dev-tools (0.42ubuntu1) intrepid; urgency=low
   [Jonathan Patrick Davies]
   * requestsync: Exit when connecting to Launchpad fails.
   * doc/requestsync.1: Document new -d flag.
+  * common.py: New functions: checkReleaseExists() and checkSourceExists().
+  * buildd and pull-lp-source: Adapt code to use new functions above.
 
   [ Jelmer Vernooij ]
   * requestsync: Add -d option to allow overriding the Debian distro to sync
